hidden <hr> puts white space below the footer.  Prevents footer content from being covered by internet operational text.

--- a/css/style.less
+++ b/css/style.less
@@ -357,3 +357,7 @@ blockquote {
     opacity: 0;
   }
 }
+
+.invisible {
+  visibility: hidden;
+}
